--- a/index.html
+++ b/index.html
@@ -1,45 +1,25 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Pratham</title>
-</head>
-<body>
-    <h1>Pratham L Kamaths Portfolio</h1>
-    <h2>I'm a Web Developer from India</h2>
-    <hr>
-    
-    <h3>Hobbies of Pratham L Kamath</h3>
-    <h4>My hobbies are:</h4>
-    <ol>
-        <li>Swimming</li>
-        <p>I started learning swimming at the age of 8 and since then I never looked back.I participated in a lot of swimming competitions and I have won silver and a bronze medal.</p>
-        <li>Playing Cricket</li>
-        <p>Cricket every evening from 5 to 7 is a joyful one. Friends come together and play cricket. I am an allrounder. That is I can bat as well as bowl. I have an unique record while playing cricket with my friends. That is I scored the fastest century.100 in 25 balls which included 6 sixes in an over.</p>
-        <li>Cooking</li>
-        <p>I started this hobby during the covid time. I cook a lot of dishes. Few of them are:
-            <ul>
-                <li>Ghee Rice</li>
-                <li>Gobi Manchurian</li>
-            </ul>
-        </p>
-        <li>Travelling</li>
-        <p>This is my most faviorate hobby. I have travelled all across Goa and Karnataka. I stay in Udupi an small district in Karnataka in India.</p>
-    </ol><hr>
-    <h3>Inorder to check my faviorate movie, click the link given below</h3>
-    <a href="./public/movie-ranking.html">My faviorate movies</a>
-    <hr>
-    <h3>Here are some of my previous projects</h3>
-    <img src="./05072023.png" alt="Projects"/>
-    <hr>
-    
-    <h3>Inorder to contact me please click the below link</h3>
-    <a href="./public/contact.html">Contact</a><br>
-    <a href="./public/about.html">About</a>
-</body>
-</html>
 
+<head>
+  <meta charset="UTF-8">
+  <title>Angela's Portfolio</title>
+</head>
+
+<body>
+  <h1>Angela Yu's Portfolio</h1>
+  <h2>I'm a Web Developer</h2>
+  <hr />
+  <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+  <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
+  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+  <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
+  <hr />
+  <a href="./public/about.html">About Me</a>
+  <a href="./public/contact.html">Contact Me</a>
+</body>
+
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
